# Zappy

./: .gitignore  CMakeLists.txt  Header.cmake  Logic.MD  main.c
alfred/: CMakeLists.txt  Header.cmake
alfred/OOP/class/Map/: MapCI.c  MapCI.h
alfred/OOP/class/Map/implem/: MapCIImplem1.c  MapCIImplem2.c
alfred/OOP/class/String/: String.c  String.h
alfred/OOP/class/String/implem/: StringImplem1.c  StringImplem2.c
alfred/OOP/class/Vector/: Vector.c  Vector.h
alfred/OOP/class/Vector/implem/: VectorImplem1.c  VectorImplem2.c
alfred/docs/: Macros.MD
alfred/docs/Alfred/: String.MD  Vector.MD
alfred/macros/: Alfred.h
alfred/macros/OOP_macros/: OOP_macros.h
alfred/macros/error/: error.c  error.h
alfred/macros/misc/: macros.h  python.h
alfred/macros/struct/: Vec2I.c  Vec2I.h
docs/: Macros.MD
docs/Alfred/: MapCI.MD  Vector.MD
src/: arg_parser.c  client_cmd.c  cmd.c  cmd.h  config.h  gui_cmd.c  select.c  server.c  wrapper_1.c  wrapper_2.c  wrapper_3.c  wrapper_main.c
src/class/MapPlayer/: MapCP.c  MapCP.h
src/class/MapPlayer/implem/: MapCPImplem1.c  MapCPImplem2.c
src/class/Player/: Player.c  Player.h
src/class/Player/implem/: PlayerImplem1.c
src/class/Server/: Server.c  Server.h
src/class/Server/implem/: ServerImplem1.c  ServerImplem2.c  ServerImplem3.c  ServerImplem4.c  ServerImplem5.c  ServerImplem6.c
src/class/Socket/: Socket.c  Socket.h
src/class/WorldMap/: WorldMap.c  WorldMap.h
src/cmd/: wrapper_main.c
src/gui/: gui_cmd.c  gui_cmd_2.c
src/inc/: arg_parser.h  inventory.c  inventory.h  team.h
tests/: SampleOOP.c  test_MapIP.c
utils/: Alfred.h  OO_macros.h  error.c  error.h  macros.h
utils/OOP/class/: String.c  String.h  Vector.c  Vector.h
utils/OOP/class/Map/implem/: MapCIImplem1.c
utils/OOP/class/implem/: StringImplem1.c  StringImplem2.c  VectorImplem1.c  VectorImplem2.c
